[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Main/HitPoints/HitPoints.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.9515, 25.3767 )

[node name="HitPoints" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
